# c_uart_interface_example

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  autopilot_interface.cpp  autopilot_interface.h  generic_port.h  makefile  mavlink_control  mavlink_control.cpp  mavlink_control.h  mavlink_serial.cpp  mavlink_serial.h  offboard_setup.cpp  offboard_setup.h  pos_target_bitmasks.h  send_quad_commands.cpp  serial_port.cpp  serial_port.h  system_defaults.h  system_ids.h  udp_port.cpp  udp_port.h
Debug/: subdir.mk
Release/: subdir.mk
mavlink/ardupilotmega/: version.h
mavlink/autoquad/: version.h
mavlink/common/: version.h
mavlink/include/mavlink/v1.0/ASLUAV/: ASLUAV.h  testsuite.h  version.h
mavlink/include/mavlink/v1.0/ardupilotmega/: version.h
mavlink/include/mavlink/v1.0/autoquad/: autoquad.h  testsuite.h
mavlink/include/mavlink/v1.0/common/: common.h
mavlink/include/mavlink/v1.0/matrixpilot/: matrixpilot.h  version.h
mavlink/include/mavlink/v1.0/slugs/: slugs.h
mavlink/include/mavlink/v1.0/test/: version.h
mavlink/include/mavlink/v1.0/ualberta/: ualberta.h  version.h
mavlink/matrixpilot/: version.h
mavlink/minimal/: version.h
mavlink/pixhawk/: pixhawk.h  version.h
mavlink/slugs/: version.h
mavlink/test/: version.h
mavlink/ualberta/: version.h
